# EzCiphey

./: README.md  index.html  main.py  redirect.py
.github/workflows/: pyproject.toml
EzCiphey/: main.py
EzCiphey/templates/: index.html
templates/: index.html  result.html
