[tool.poetry]
name = "EzCiphey"
version = "1.0.2"
description = "A simple Flask web wrapper for the Ciphey API"
authors = ["DJ Stomp<stompzone@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
